Add missing check-setup in the example.

--- a/README.adoc
+++ b/README.adoc
@@ -46,7 +46,8 @@ At this point I tried proving inside docker (firstly setup ROM, then generate pr
 [source,sh]
 ----
 docker run --gpus all -v $(pwd):/data zisk-docker bash -c \
-  "cargo-zisk rom-setup -e /data/zec-keccakf-k256-sha2-bn254.elf && \
+  "cargo-zisk check-setup -a && \
+   cargo-zisk rom-setup -e /data/zec-keccakf-k256-sha2-bn254.elf && \
    cargo-zisk prove -e /data/zec-keccakf-k256-sha2-bn254.elf -i /data/22767493_185_14.bin -o /tmp/out -a -u"
 ----
 
