Add CUDA setup and warn about libraries mismatch.

--- a/README.adoc
+++ b/README.adoc
@@ -27,9 +27,24 @@ source ~/.bashrc
 # Fix permissions.
 sudo chown -R ubuntu:ubuntu /home/ubuntu/.zisk
 
+# Install CUDA toolkit v12.8 (other versions might not work).
+wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64/cuda-keyring_1.1-1_all.deb
+sudo dpkg -i cuda-keyring_1.1-1_all.deb
+sudo apt-get update
+sudo apt-get -y install cuda-toolkit-12-8
+export PATH=/usr/local/cuda-12.8/bin:$PATH
+export LD_LIBRARY_PATH=/usr/local/cuda-12.8/lib64:$LD_LIBRARY_PATH
+
 # Generate tree files.
 cargo-zisk check-setup -a
 ----
+
+[CAUTION]
+====
+Binaries are dynamically linked, so you should match their libraries on the host, e.g. `/usr/local/cuda/targets/x86_64-linux/lib/libcudart.so.12`.
+
+You should be good when using **Ubuntu 22.04** (recommended) or Ubuntu 24.04.
+====
 
 == Usage
 
